openshift-voting-app/deployment.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: result
  labels:
    app: voting-app
spec:
  triggers:
  - type: ConfigChange
  replicas: 1
  selector:
    app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      securityContext:
        runAsUser: 1001
      containers:
        - name: result
          image: mgrillet/result:latest
---

kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: result
  labels:
    app: voting-app
spec:
  triggers:
  - type: ConfigChange
  replicas: 1
  selector:
    app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      securityContext:
        runAsUser: 1001
      containers:
        - name: result
          image: mgrillet/result:latest
---

kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: worker
  labels:
    app: voting-app
spec:
  triggers:
  - type: ConfigChange
  replicas: 1
  selector:
    app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      securityContext:
        runAsUser: 1001
      containers:
        - name: worker
          image: mgrillet/worker:latest
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: result
  labels:
    app: voting-app
spec:
  to:
    kind: Service
    name: result
  port:
    targetPort: 8080
---

kind: Service
apiVersion: v1
metadata:
  name: result
  labels:
    app: voting-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: result
  type: ClusterIP
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vote
  labels:
    app: voting-app
spec:
  to:
    kind: Service
    name: vote
  port:
    targetPort: 8080
---

kind: Service
apiVersion: v1
metadata:
  name: vote
  labels:
    app: voting-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: vote
  type: ClusterIP
